8344032: InterpreterRuntime::verify_mdp() missing lock while printing MethodData on failure

Reviewed-by: shade, dholmes, tschatzl